# CPPJoules

./: .gitignore  CMakeLists.txt  README.md  index.html  installer.bat  installer.sh
cmake/: CPP_Joules_Config.cmake.in
evaluation/evaluation_results/array_concat/: array_concat.cpp_run.csv  array_concat.py_run.csv
evaluation/evaluation_results/bubble_sort/: bubble_sort.cpp_run.csv  bubble_sort.py_run.csv
evaluation/evaluation_results/insertion_sort/: insertion_sort.cpp_run.csv  insertion_sort.py_run.csv
evaluation/evaluation_results/matrix_mul/: matrix_mul.cpp_run.csv  matrix_mul.py_run.csv
evaluation/evaluation_results/merge_sort/: merge_sort.cpp_run.csv  merge_sort.py_run.csv
evaluation/evaluation_results/nbody/: nbody.cpp_run.csv  nbody.py_run.csv
evaluation/evaluation_scripts/array_concat/: array_concat.cpp  array_concat.py
evaluation/evaluation_scripts/bubble_sort/: bubble_sort.cpp  bubble_sort.py
evaluation/evaluation_scripts/insertion_sort/: insertion_sort.cpp  insertion_sort.py
evaluation/evaluation_scripts/matrix_mul/: matrix.h  matrix_mul.cpp  matrix_mul.py
evaluation/evaluation_scripts/merge_sort/: merge_sort.cpp  merge_sort.py
evaluation/evaluation_scripts/nbody/: nbody.cpp  nbody.py
include/: cppJoules.h
src/: cppJoules.cpp  cppJoules_exceptions.h  energy_state.cpp  energy_state.h  nvidia_devices.cpp  nvidia_devices.h  rapl_devices.cpp  rapl_devices.h
test/: test_multi.cpp  testcuda.cu
